# Quick-Fix

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
Backend/: README.md  db.sqlite3  deploy.ps1  deploy.sh  manage.py  pyproject.toml
Backend/accounts/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
Backend/accounts/migrations/: 0001_initial.py  0002_profile_delete_serviceprovideruser.py  0003_providerapplication.py  0003_serviceprovider.py  0004_remove_profile_about_me_and_more.py  0004_remove_providerapplication_review_at_and_more.py  0005_alter_serviceprovider_total_rating.py  0006_alter_serviceprovider_average_rating.py  0007_workimage.py  0008_profile_favorites.py  0009_profile_latitude_profile_longitude.py  0010_profile_city_profile_state_alter_profile_latitude_and_more.py  0011_serviceprovider_favorited_jobs.py  0012_alter_serviceprovider_total_rating.py  0015_merge_20260408_0552.py  (+3 more)
Backend/api/: serializers.py  urls.py  views.py
Backend/config/: settings.py  urls.py
Backend/jobs/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
Backend/messaging/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
Backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/quickfix_backend/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
Backend/reports/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
Backend/services/: models.py  urls.py  views.py
(+126 files in other folders)
